# cpp-assignment

./: CMakeLists.txt  README.md  property_tree.fbs  receiver.cpp  sender.cpp
.github/workflows/: codeql.yml  main.yml
cmake/: BuildFlatBuffers.cmake
